# bgem3-pyserver

./: .dockerignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
schemas/: openai_embedding.py
