[tool.poetry]
name = "bge-m3-server"
version = "0.1.0"
description = ""
authors = ["Harsh <harshsavasil1995@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flagembedding = ">=1.3.2"
torch = ">=2.0.0"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
numpy = ">=1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"